Fix icon spacing on cards

--- a/src/scss/_card.scss
+++ b/src/scss/_card.scss
@@ -53,7 +53,6 @@
   &__header {
     display: flex;
     align-items: center;
-    gap: 0.5rem;
     font-size: 15px;
     margin-bottom: 0.75rem;
 
@@ -125,12 +124,9 @@
   &__sticky-icon {
     color: var(--fg-700);
     font-size: 75%;
+    line-height: 1;
+    margin-left: 8px;
     opacity: .375;
-    transform: translateY(1px);
-
-    &:not(:last-child) {
-      margin-right: 4px;
-    }
   }
 
   &__controls {
@@ -144,9 +140,8 @@
     color: var(--fg-700);
     line-height: 1;
     text-align: right;
-    padding-right: .625rem;
+    padding: 0 .625rem 0 .75rem;
     margin-right: -0.75rem;
-    min-width: 32px;
 
     &:not(.last-clicked) {
       .popup-menu {
